[package]
authors = ["Solana Maintainers <maintainers@solana.foundation>"]
edition = "2021"
name = "solana-bpf-tracer-plugin-interface"
description = "The Solana BPF tracer plugin interface."
version = "1.15.0"
repository = "https://github.com/solana-labs/solana"
license = "Apache-2.0"
homepage = "https://solana.com/"

[dependencies]
solana-sdk = { path = "../sdk", version = "=1.15.0" }
solana_rbpf = "=0.2.36"
thiserror = "1.0.31"
