[package]
name = "solana-bpf-tracer-plugin-interface"
description = "The Solana BPF tracer plugin interface."
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[dependencies]
solana-sdk = { workspace = true }
solana_rbpf = { workspace = true }
thiserror = { workspace = true }
