[package]
name = "solana-bucket-ledger"
version = "1.1.20"
description = "Solana Bucket Ledger"
authors = ["Solana Maintainers <maintainers@solana.com>"]
repository = "https://github.com/solana-labs/solana"
license = "Apache-2.0"
homepage = "https://solana.com/"
edition = "2018"

[dependencies]
aws-creds = "0.22.1"
aws-region = "0.21.0"
bincode = "1.2.1"
bzip2 = "0.3.3"
enum-iterator = "0.6.0"
flate2 = "1.0.14"
futures = "0.3.5"
tokio = "0.2.21"
#rust-s3 = { git = 'https://github.com/mvines/rust-s3', branch = 'list-page' }
rust-s3 = "0.22.12"
serde = "1.0.112"
serde_derive = "1.0.103"
solana-measure = { path = "../measure", version = "1.1.20" }
solana-sdk = { path = "../sdk", version = "1.1.20" }
solana-transaction-status = { path = "../transaction-status", version = "1.1.20" }
thiserror = "1.0"
zstd = "0.5.1"
log = "0.4.8"


[lib]
crate-type = ["lib"]
name = "solana_bucket_ledger"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
