[package]
name = "solana-bucket-map"
version = "1.10.36"
description = "solana-bucket-map"
homepage = "https://solana.com/"
documentation = "https://docs.rs/solana-bucket-map"
readme = "../README.md"
repository = "https://github.com/solana-labs/solana"
authors = ["Solana Maintainers <maintainers@solana.foundation>"]
license = "Apache-2.0"
edition = "2021"

[dependencies]
log = { version = "0.4.11" }
memmap2 = "0.5.3"
modular-bitfield = "0.11.2"
rand = "0.7.0"
solana-measure = { path = "../measure", version = "=1.10.36" }
solana-sdk = { path = "../sdk", version = "=1.10.36" }
tempfile = "3.3.0"

[dev-dependencies]
fs_extra = "1.2.0"
rayon = "1.5.0"
solana-logger = { path = "../logger", version = "=1.10.36" }

[lib]
crate-type = ["lib"]
name = "solana_bucket_map"

[[bench]]
name = "bucket_map"
