[package]
name = "solana-bucket-map"
description = "solana-bucket-map"
documentation = "https://docs.rs/solana-bucket-map"
readme = "../README.md"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }

[dependencies]
log = { version = "0.4.17" }
memmap2 = "0.5.3"
modular-bitfield = "0.11.2"
rand = "0.7.0"
solana-measure = { path = "../measure", version = "=1.15.0" }
solana-sdk = { path = "../sdk", version = "=1.15.0" }
tempfile = "3.3.0"

[dev-dependencies]
fs_extra = "1.2.0"
rayon = "1.5.3"
solana-logger = { path = "../logger", version = "=1.15.0" }

[lib]
crate-type = ["lib"]
name = "solana_bucket_map"

[[bench]]
name = "bucket_map"
